--- a/css/style.css
+++ b/css/style.css
@@ -189,9 +189,9 @@ ul,li{
 	line-height:24px;
 	text-transform:uppercase;
 	background:none;
-	color:#ffffff !important;
+	color:#f71010 !important;
 	font-size:14px;
-	border:2px solid #ffffff !important;
+	border:2px solid #f60707 !important;
 	font-family: 'Raleway', sans-serif;
 	font-weight:700;
 	border-radius:20px;
@@ -1128,7 +1128,7 @@ section > .container-fluid {
 
 .main-slider h2{
 	font-size:48px;
-	color:#ffffff;
+	color:#f80000;
 	font-weight:700;
 }
 
